@@ -61,6 +61,7 @@ gdk_pixbuf_new
 gdk_pixbuf_new_from_data
 gdk_pixbuf_new_from_file
 gdk_pixbuf_new_from_file_at_size
+gdk_pixbuf_new_from_file_at_scale
 gdk_pixbuf_new_from_inline
 gdk_pixbuf_new_from_xpm_data
 gdk_pixbuf_new_subpixbuf
