@@ -1,3 +1,8 @@
+Thu Aug 26 01:31:42 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add 
+	gdk_pixbuf_new_from_file_at_scale().
+
 2004-08-25  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.5.2 ===
